# vcamshare

./: .gitignore  .gitmodules  CMakeLists.txt
scripts/: build_android.sh  build_boost.sh  build_ffmpeg.sh  build_ios.sh  build_share_local.sh  build_share_mobile.sh  test.sh
src/: config.h.in
src/main/: firmware_manager.cpp  firmware_manager.h  muxer.cpp  muxer.h  utils.cpp  utils.h  vcamshare.cpp  vcamshare.h  vcamshare_ios.cpp  video_muxer.cpp  video_muxer.h
src/test/: example_test.cpp  main.cpp  run.cpp
